# wonterval

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yaml  mise.toml  scratch.md
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
deploy/k8s/base/: namespace.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/sessions/: +page.svelte
frontend/src/routes/sessions/[id]/: +page.svelte
frontend/src/routes/sessions/new/: +page.svelte
